--- a/style.css
+++ b/style.css
@@ -547,14 +547,6 @@ video {
   height: 100vh;
 }
 
-.max-w-\[1500px\] {
-  max-width: 1500px;
-}
-
-.max-w-\[100px\] {
-  max-width: 100px;
-}
-
 .max-w-\[1300px\] {
   max-width: 1300px;
 }
@@ -565,11 +557,6 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-zinc-800 {
@@ -597,11 +584,59 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-\[32pc\] {
+  font-size: 32pc;
+}
+
+.text-\[32px\] {
+  font-size: 32px;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-semibold {
   font-weight: 600;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
+}
+
+.tracking-tighter {
+  letter-spacing: -0.05em;
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[32\] {
+  color: 32;
+}
+
+.text-\[32p\] {
+  color: 32p;
 }
