--- a/style.css
+++ b/style.css
@@ -534,10 +534,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.relative {
-  position: relative;
-}
-
 .-m-1 {
   margin: -0.25rem;
 }
@@ -545,11 +541,6 @@ video {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .ml-1 {
@@ -576,22 +567,6 @@ video {
   width: 4rem;
 }
 
-.max-w-\[1300px\] {
-  max-width: 1300px;
-}
-
-.max-w-\[130px\] {
-  max-width: 130px;
-}
-
-.max-w-\[1px\] {
-  max-width: 1px;
-}
-
-.max-w-\[12px\] {
-  max-width: 12px;
-}
-
 .max-w-\[1216px\] {
   max-width: 1216px;
 }
@@ -608,8 +583,9 @@ video {
   border-radius: 9999px;
 }
 
-.border {
-  border-width: 1px;
+.border-x-2 {
+  border-left-width: 2px;
+  border-right-width: 2px;
 }
 
 .border-x {
@@ -617,38 +593,14 @@ video {
   border-right-width: 1px;
 }
 
-.border-x-2 {
-  border-left-width: 2px;
-  border-right-width: 2px;
-}
-
-.border-b {
+.border-y {
+  border-top-width: 1px;
   border-bottom-width: 1px;
 }
 
-.border-zinc-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(63 63 70 / var(--tw-border-opacity));
-}
-
-.border-zinc-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(39 39 42 / var(--tw-border-opacity));
-}
-
-.border-zinc-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(24 24 27 / var(--tw-border-opacity));
-}
-
-.border-zinc-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(82 82 91 / var(--tw-border-opacity));
-}
-
-.border-gray-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+.border-x-0 {
+  border-left-width: 0px;
+  border-right-width: 0px;
 }
 
 .border-gray-800 {
@@ -705,6 +657,21 @@ video {
   line-height: 1.75rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -721,8 +688,20 @@ video {
   line-height: 1.75rem;
 }
 
+.leading-8 {
+  line-height: 2rem;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tracking-normal {
+  letter-spacing: 0em;
 }
 
 .text-white {
@@ -733,6 +712,20 @@ video {
 .text-zinc-400 {
   --tw-text-opacity: 1;
   color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[32\] {
+  color: 32;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:text-teal-400:hover {
@@ -746,23 +739,107 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:mx-1 {
-    margin-left: 0.25rem;
-    margin-right: 0.25rem;
-  }
-
-  .sm\:mx-16 {
-    margin-left: 4rem;
-    margin-right: 4rem;
-  }
-
-  .sm\:mx-12 {
-    margin-left: 3rem;
-    margin-right: 3rem;
-  }
-
   .sm\:mx-8 {
     margin-left: 2rem;
     margin-right: 2rem;
+  }
+
+  .sm\:mx-\[\] {
+    margin-left: ;
+    margin-right: ;
+  }
+
+  .sm\:mx-\[3\] {
+    margin-left: 3;
+    margin-right: 3;
+  }
+
+  .sm\:mx-\[30\] {
+    margin-left: 30;
+    margin-right: 30;
+  }
+
+  .sm\:mx-\[30p\] {
+    margin-left: 30p;
+    margin-right: 30p;
+  }
+
+  .sm\:mx-\[30px\] {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .sm\:mx-\[px\] {
+    margin-left: px;
+    margin-right: px;
+  }
+
+  .sm\:mx-\[2px\] {
+    margin-left: 2px;
+    margin-right: 2px;
+  }
+
+  .sm\:mx-\[28px\] {
+    margin-left: 28px;
+    margin-right: 28px;
+  }
+
+  .sm\:mx-\[31\] {
+    margin-left: 31;
+    margin-right: 31;
+  }
+
+  .sm\:mx-\[31p\] {
+    margin-left: 31p;
+    margin-right: 31p;
+  }
+
+  .sm\:mx-\[31px\] {
+    margin-left: 31px;
+    margin-right: 31px;
+  }
+
+  .sm\:mx-\[32px\] {
+    margin-left: 32px;
+    margin-right: 32px;
+  }
+
+  .sm\:mx-\[3px\] {
+    margin-left: 3px;
+    margin-right: 3px;
+  }
+
+  .sm\:mx-px {
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .sm\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .sm\:border-x-2 {
+    border-left-width: 2px;
+    border-right-width: 2px;
+  }
+
+  .sm\:border-gray-800 {
+    --tw-border-opacity: 1;
+    border-color: rgb(31 41 55 / var(--tw-border-opacity));
+  }
+
+  .sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .sm\:leading-\[56px\] {
+    line-height: 56px;
   }
 }
