--- a/style.css
+++ b/style.css
@@ -534,30 +534,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
-.inset-0 {
-  inset: 0px;
-}
-
-.inset-1 {
-  inset: 0.25rem;
-}
-
-.inset-4 {
-  inset: 1rem;
-}
-
-.inset-5 {
-  inset: 1.25rem;
-}
-
-.inset-10 {
-  inset: 2.5rem;
-}
-
 .-m-1 {
   margin: -0.25rem;
 }
@@ -565,11 +541,6 @@ video {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .ml-1 {
@@ -584,6 +555,10 @@ video {
   margin-top: 2.25rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -596,20 +571,32 @@ video {
   width: 4rem;
 }
 
-.w-full {
-  width: 100%;
+.max-w-2xl {
+  max-width: 42rem;
 }
 
 .max-w-\[1216px\] {
   max-width: 1216px;
 }
 
-.max-w-2xl {
-  max-width: 42rem;
+.max-w-\[\] {
+  max-width: ;
 }
 
-.max-w-full {
-  max-width: 100%;
+.max-w-\[1\] {
+  max-width: 1;
+}
+
+.max-w-\[12\] {
+  max-width: 12;
+}
+
+.max-w-\[121\] {
+  max-width: 121;
+}
+
+.max-w-\[1216\] {
+  max-width: 1216;
 }
 
 .justify-center {
@@ -632,11 +619,6 @@ video {
 .border-zinc-700 {
   --tw-border-opacity: 1;
   border-color: rgb(63 63 70 / var(--tw-border-opacity));
-}
-
-.border-zinc-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(39 39 42 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -674,6 +656,31 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[23\] {
+  padding-top: 23;
+  padding-bottom: 23;
+}
+
+.py-\[23px\] {
+  padding-top: 23px;
+  padding-bottom: 23px;
+}
+
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.py-\[22px\] {
+  padding-top: 22px;
+  padding-bottom: 22px;
+}
+
 .text-\[32px\] {
   font-size: 32px;
 }
@@ -694,6 +701,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .leading-10 {
@@ -748,27 +759,9 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:fixed {
-    position: fixed;
-  }
-
-  .sm\:inset-0 {
-    inset: 0px;
-  }
-
   .sm\:mx-8 {
     margin-left: 2rem;
     margin-right: 2rem;
-  }
-
-  .sm\:mx-\[30px\] {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-
-  .sm\:border-x {
-    border-left-width: 1px;
-    border-right-width: 1px;
   }
 
   .sm\:text-5xl {
@@ -778,13 +771,6 @@ video {
 
   .sm\:leading-\[56px\] {
     line-height: 56px;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
@@ -798,12 +784,26 @@ video {
     margin-left: 4rem;
     margin-right: 4rem;
   }
+}
 
-  .lg\:pr-48 {
-    padding-right: 12rem;
+@media (min-width: 1280px) {
+  .xl\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .lg\:pr-\[120px\] {
-    padding-right: 120px;
+  .xl\:mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .xl\:mx-20 {
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+
+  .xl\:mx-24 {
+    margin-left: 6rem;
+    margin-right: 6rem;
   }
 }
